---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type s : set of boolean\ntype b : boolean\nvar _ := s(b)\n"
---
"s"@"src/main.t:5..6" [Type]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"s"@"src/main.t:9..23" [Set]: <error>
"b"@"src/main.t:29..30" [Type]: alias[DefId(PackageId(3072), LocalDefId(2))] of boolean
"_"@"src/main.t:45..46" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(1))] of boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:52..53: cannot use `b` as an expression
| error for src/main.t:52..53: `b` is a reference to a type, not a variable
| note for src/main.t:29..30: `b` declared here
